Fixing small bugs done, finding order + adding to logbook done

--- a/ChristineLeDucApplicationCustomersService/Logic/Logic.csproj
+++ b/ChristineLeDucApplicationCustomersService/Logic/Logic.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Datalayer\Datalayer.csproj" />
+    <ProjectReference Include="..\Globals\Globals.csproj" />
   </ItemGroup>
 
 </Project>
