--- a/ChristineLeDucApplicationCustomersService/CustomersService/CustomersService.csproj
+++ b/ChristineLeDucApplicationCustomersService/CustomersService/CustomersService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Globals\Globals.csproj" />
     <ProjectReference Include="..\Logic\Logic.csproj" />
   </ItemGroup>
 
