--- a/ChristineLeDucApplicationCustomersService/Datalayer/Datalayer.csproj
+++ b/ChristineLeDucApplicationCustomersService/Datalayer/Datalayer.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Data.OleDb" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Globals\Globals.csproj" />
+  </ItemGroup>
+
 </Project>
